# html-parser

./: .gitignore  CMakeLists.txt  README.md
include/: defines.h  driver.h  lexer.h  misc.h  preprocessor.h  tokenizer.h  tree.h  tree_builder.h
src/: driver.c  lexer.c  main.c  misc.c  preprocessor.c  tokenizer.c  tree.c  tree_builder.c
